--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,29 @@
+/*****************************
+reset
+*****************************/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /*****************************
 greetings
 *****************************/
+.greetings__form,
 .greetings__text {
   display: none;
 }
 
 .greetings__text.active {
+  display: block;
+}
+
+.showing {
   display: block;
 }
