--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+input {
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /*****************************
 greetings
 *****************************/
@@ -24,6 +29,13 @@ greetings
   display: block;
 }
 
+/*****************************
+flag
+*****************************/
 .showing {
   display: block;
+}
+
+.hidden {
+  display: none;
 }
