--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ container
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
