--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,14 @@ greetings
 }
 
 /*****************************
+todo
+*****************************/
+.todo {
+  display: none;
+  position: relative;
+}
+
+/*****************************
 flag
 *****************************/
 .showing {
