--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ todo
   position: relative;
 }
 
+.todo__del-btn {
+  cursor: pointer;
+}
+
 /*****************************
 flag
 *****************************/
