Update todo status when check box is clicked

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ todo
   cursor: pointer;
 }
 
+.todo__checkbox__done {
+  text-decoration: line-through;
+}
+
 /*****************************
 flag
 *****************************/
