--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ li {
   list-style: none;
 }
 
+input {
+  border: none;
+  outline: none;
+}
+
 /*****************************
 container
 *****************************/
@@ -86,10 +91,15 @@ clock
   position: relative;
 }
 
+.clock__output {
+  font-size: 115px;
+}
+
 /*****************************
 greetings
 *****************************/
 .greetings {
+  margin-bottom: 30px;
   position: relative;
 }
 
@@ -100,12 +110,75 @@ greetings
   display: none;
 }
 
+.greetings__intro-text {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+.greetings__input {
+  width: 100%;
+  height: 80px;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 40px;
+  color: #333;
+}
+
+.greetings__output-text {
+  font-size: 35px;
+}
+
+.waving-hand {
+  margin-left: 5px;
+  display: inline-block;
+  animation: wavingHand 2.5s infinite;
+}
+
+@keyframes wavingHand {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(20deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 /*****************************
 todo
 *****************************/
 .todo {
   display: none;
   position: relative;
+  max-width: 470px;
+  width: 100%;
+}
+
+.todo__input {
+  width: 100%;
+  height: 55px;
+  padding: 20px 25px;
+  font-size: 20px;
+  border-radius: 40px;
+  color: #333;
 }
 
 .todo__del-btn {
