--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,16 @@ todo
   width: 100%;
 }
 
+.todo__list {
+  max-height: 500px;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.todo__form {
+  margin-bottom: 30px;
+}
+
 .todo__input {
   width: 100%;
   height: 55px;
@@ -181,8 +191,45 @@ todo
   color: #333;
 }
 
-.todo__del-btn {
+.todo__checkbox {
+  position: relative;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 20px 50px;
+  transition: 0.2s;
   cursor: pointer;
+}
+
+.todo__checkbox:hover {
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.todo__checkbox input[type='checkbox'] {
+  position: absolute;
+  left: 0;
+}
+
+.todo__checkbox label {
+  display: inline-block;
+  width: 100%;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.todo__checkbox + .todo__checkbox {
+  margin-top: 10px;
+}
+
+.todo__del-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 25px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.todo__checkbox:hover .todo__del-btn:hover {
+  color: red;
 }
 
 .todo__checkbox__done {
