--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,8 @@ greetings
   text-align: center;
   border-radius: 40px;
   color: #333;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .greetings__output-text {
@@ -203,6 +205,8 @@ todo
   font-size: 20px;
   border-radius: 40px;
   color: #333;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .todo__checkbox {
