--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ footer
 }
 
 .reset-btn {
+  display: none;
   position: fixed;
   right: 20px;
   bottom: 20px;
@@ -353,10 +354,6 @@ footer
   opacity: 0.5;
 }
 
-.reset-btn:active {
-  transform: scale(0.7);
-}
-
 [data-tooltip]:before,
 [data-tooltip]:after {
   position: absolute;
@@ -367,7 +364,7 @@ footer
   opacity: 0;
   visibility: hidden;
   z-index: 9;
-  transition: 0.6s ease-in-out 0.4s;
+  transition: 0.6s ease-in-out;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -402,7 +399,7 @@ footer
 [data-tooltip]:hover:after {
   opacity: 1;
   visibility: visible;
-  transition: 0.4s ease-in-out 0.3s;
+  transition: 0.4s ease-in-out;
 }
 
 /*****************************
